# mad

./: CHANGELOG.md  Cargo.toml  README.md  cuddle.yaml
.woodpecker/: ci.yaml  publish.yaml  release.yaml
crates/mad/: Cargo.toml
crates/mad/examples/basic/: main.rs
crates/mad/examples/comprehensive/: Cargo.toml  main.rs
crates/mad/examples/error_log/: main.rs
crates/mad/examples/fn/: main.rs
crates/mad/examples/multi_service/: Cargo.toml  main.rs
crates/mad/examples/nested_errors/: main.rs
crates/mad/examples/signals/: main.rs
crates/mad/examples/staged_shutdown/: main.rs
crates/mad/src/: lib.rs  waiter.rs
crates/mad/tests/: mod.rs  signal.rs
